New logging file

--- a/maven_learning/module-1/module-1-core/src/main/resources/application.properties
+++ b/maven_learning/module-1/module-1-core/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=8081
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?schema=maven_learning
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+
