--- a/maven_learning/pom.xml
+++ b/maven_learning/pom.xml
@@ -8,8 +8,8 @@
 
     <properties>
 
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -41,7 +41,17 @@
                 <artifactId>common-data-transfer-object</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-bom</artifactId>
+                <version>2.13.3</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
         </dependencies>
+
     </dependencyManagement>
 
     <dependencies>
@@ -50,6 +60,8 @@
             <artifactId>lombok</artifactId>
             <version>1.18.12</version>
         </dependency>
+
+
     </dependencies>
 
     <build>
